# VegeHubPyPiLib

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  Walkthrough.md  integration_test.py  pyproject.toml  setup-dev.fish  testrun.py
.github/: copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: config.yaml  config.yml
.github/workflows/: ci.yml  python-package.yml
doc/AI/: ACTUATOR_TEST_ENHANCEMENT.md  ASYNCIO_THREADING_FIX.md  CI_SETUP.md  CONFIG_FORMAT_FIX.md  FIRMWARE_DETECTION_FIX.md  INTEGRATION_TESTS.md  INTEGRATION_TEST_CLEANUP.md  INTEGRATION_TEST_FIXES.md  INTEGRATION_TEST_SUMMARY.md  MDNS_DISCOVERY_FIX.md  MDNS_TROUBLESHOOTING.md  PRE_COMMIT_CI_SUMMARY.md  PRE_COMMIT_SETUP.md  PYTEST_WARNING_FIX.md  README.md  REAL_MDNS_FIX.md  SESSION_REUSE_FIX.md  SESSION_REUSE_SUMMARY.md  SETUP_FUNCTION_TEST.md  TEST6_VERIFICATION_FIX.md  UNCLOSED_CONNECTION_FIX.md  VERBOSE_TEST_UPDATES.md
tests/: test_helpers.py  test_vegehub.py
vegehub/: __init__.py  helpers.py  vegehub.py
