[tool.poetry]
name = "vegehub"
version = "0.1.26"
description = "A basic package for simplifying interactions with the Vegetronix VegeHub"
authors = ["Thulrus <85890024+Thulrus@users.noreply.github.com>"]
readme = "README.md"
homepage = "https://www.vegetronix.com/Products/VG-HUB-RELAY/"
repository = "https://github.com/Thulrus/VegeHubPyPiLib"
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "^3.10.8"


[tool.poetry.group.dev.dependencies]
aioresponses = "^0.7.6"
pytest-asyncio = ">=0.24,<1.3"
mypy = "^1.13.0"
pytest-cov = ">=6,<8"
pylint = ">=3.3.1,<5.0.0"
pytest = "^8.3.3"
zeroconf = ">=0.136.2,<0.149.0"
pre-commit = "^4.3.0"
black = "^25.9.0"
isort = "<8"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["vegehub"]
omit = [
    "integration_test.py",
    "tests/*",
    "*/tests/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
